added domain, updated for latest illustrations

--- a/reveal.js/slides.html
+++ b/reveal.js/slides.html
@@ -347,7 +347,7 @@ Proposal Forming...
 5. **Review**: process with consent decision making
 </script></section><section data-markdown><script type="text/template">### Strategy
 
-<img class="float-right" src="img/tension-driver-domain/domain-model.png" width="50%" />
+<img class="float-right" src="img/tension-driver-domain/driver-strategy-agreements-domain.png" width="50%" />
 
 _A **strategy** is the approach towards creating value within a domain._
 
@@ -370,6 +370,17 @@ _A **strategy** is the approach towards creating value within a domain._
 Strategies are implemented and refined through a serieses of experiments.
 
 ![](img/drivers-and-subdrivers/driver-strategy-experiment.png)
+
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+
+### Strategy (cont.)
+
+![](img/tension-driver-domain/domain-model.png)
 </script></section><section data-markdown><script type="text/template">### Evaluate Agreements
 
 The periodical review of agreements is an essential practice for a learning organization: continuously improving the body of agreements, and eliminating waste:
@@ -942,13 +953,16 @@ In the addition to the patterns in this sections there's also two subsections:
 * work in progress is considered waste as it ties up resources
 * continuous flow of value prevents accumulation of waste
     * it also makes for shorter feedback loops and amplifies learning
-</script></section><section data-markdown><script type="text/template">### Organize In Nested Domains
+</script></section><section data-markdown><script type="text/template">### Domain
 
-<img class="float-right" src="img/tension-driver-domain/nested-domains.png" width="50%" />
+<img class="float-right" src="img/tension-driver-domain/driver-response-full.png" width="50%" />
 
 _A **domain** is an area of influence, autonomy and accountability._
 
 Building an organization from domains defined along organizational drivers facilitates effective collaboration by creating enabling constraints and clear and logical boundaries for accountablility.
+
+When defining a domain in relation to an organisational driver, consider
+responsibilities, the resources and skills required, and the constraints to the domain's autonomy necessary for collaboration and exchange with other domains.
 
 
     </script>
@@ -957,13 +971,13 @@ Building an organization from domains defined along organizational drivers facil
 <section data-markdown>
     <script type="text/template">
 
-### Drivers Define Domains of Accountability
+### Domains and Accountability
 
-<img class="float-right" src="img/tension-driver-domain/driver-response-full.png" width="50%" />
+<img class="float-right" src="img/tension-driver-domain/nested-domains.png" width="50%" />
 
 * accountability applies to all agreements, including the organization itself, circles, and roles
 * everyone's primary accountability is for effective collaboration in response to drivers
-* circles are accountable their work, their body of agreements and for their own development
+* circles are accountable their work, for their body of agreements and for their own development
 * everyone in an organization is accountable for upholding organizational values and principles
 </script></section><section data-markdown><script type="text/template">### Linking
 
