some patterns renamed an hopefully final corrections for next release

--- a/reveal.js/slides.html
+++ b/reveal.js/slides.html
@@ -141,6 +141,27 @@ A **driver** is the source of motivation for action in a specific situation (the
 <section data-markdown>
     <script type="text/template">
 
+###  Primary Driver, Subdriver and Superdriver
+
+A **driver** can be understood in relation to the **domain** it defines and its relationship to other **drivers**.
+
+The driver that defines a domain is called the **primary driver** of that domain.
+
+The **primary priver** is the **superdriver** of all other **drivers** that arise as a consequence of people responding to it.
+
+A **primary driver** is itself a **subdriver** of its **superdriver**, except in the case of the organization itself, in which case it is referred to as the **organizations primary driver**.
+
+Two **drivers** existing as a direct consequence of a response to the same **superdriver**, are described as **peer drivers**.
+
+The prefixes **primary**, **peer**, **sub-** and **super-**, can refer to both **drivers** and **domains**.
+
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+
 #### Drivers: Value and Waste ####
 
 _**Value:** is the importance, worth or usefulness of something in relation to a driver._
@@ -221,26 +242,27 @@ based on learning.
 * Do we still associate the same needs with the situation?
 * Is the driver still within our domain?
 * Is the driver still relevant?
-</script></section><section data-markdown><script type="text/template">### Qualifying Organizational Drivers
+</script></section><section data-markdown><script type="text/template">### Qualify Organizational Drivers
 
 Some situations might be helpful to address in the context of an organization's primary driver. Others are not within an organization's domain.
 
-A simple way to qualifying organizational drivers is by checking:
+A simple way to qualify organizational drivers is by checking:
 
 _Would responding to this driver improve - or avoid impeding - flow of value to an existing Organizational Driver? a.k.a. can it help or harm us?_
 </script></section><section data-markdown><script type="text/template">### Objection
 
 _An **objection** is a reason why doing something stands in the way of (more) effective response to a driver._
 
-Objections:
+Objections contain informations that reveals:
+- certain or likely consequence of harm (not considered safe enough to try)
+- ways to improve proposals, decisions, existing agreements or actions
 
-* reveal information that can be used to improve proposals and existing agreements
-* stop (TODO: make more concise)
-    * proposals from becoming agreements
-    * people acting on decisions
-    * action (continuing to act)
-    * existing agreements
-* reveal both opportunities or impediments
+Objections stop:
+
+* actions
+* people from executing on decisions
+* existing agreements
+* proposals from becoming agreements
 
 
     </script>
@@ -280,11 +302,12 @@ Being able to raise objections at any time means that decisions only need to be 
 ### Some Helpful Questions
 
 * Does the objection relate to this specific proposal or agreement?
-* Does this objection reveal how a (proposed or current) **action or agreement**...
-    * ...harm the response to a driver?
-    * ...is in conflict with the organization's values?
-    * ...prevents or diminishes someone's contribution to responding to a driver?
-    * ...can be improved right now?
+* Does this objection reveal how a (proposed or current) **action or agreement**:
+    * harms response to any organizational driver?
+    * can be improved right now?
+    * prevents or diminishes someone's contribution to responding to a driver?
+    * is in conflict with the organization's values?
+    * is considered not ‘safe enough’ to try?
 
 
     </script>
@@ -293,12 +316,17 @@ Being able to raise objections at any time means that decisions only need to be 
 <section data-markdown>
     <script type="text/template">
 
-# Concerns #
+# Concerns
 
-* can inform ways to further evolve agreements (including evaluation criteria and frequency of evaluation) even if they are already considered *good enough for now, safe enough to try*
-* are heard if there's time or they're considered important
-* are often argued as a chance or possibility
+A **concern** is an _opinion_ that doing something (even if already considered _good enough for now, safe enough to try_) **might** impede – or miss an opportunity to improve – flow of value to an organizational driver.
+
+In consent decision making, concerns:
+
+* can inform ways to further evolve agreements (including evaluation criteria and frequency of evaluation)
+* are heard if there's time or they are considered important
 * are recorded in the logbook
+
+People can raise concerns as objections to seek others opinion of likely risk, if they believe a proposal may not be ‘safe enough to try’.
 </script></section><section data-markdown><script type="text/template">### Resolve Objections
 
 ![](img/agreements/resolve-objections.png)
@@ -341,7 +369,7 @@ Being able to raise objections at any time means that decisions only need to be 
 
 * In the absence of objections against an agreement, I intend to follow through on the agreement to the best of my ability.
 * I agree to share objections as I become aware of them.
-</script></section><section data-markdown><script type="text/template">### Navigating Via Tension
+</script></section><section data-markdown><script type="text/template">### Navigate Via Tension
 
 #### ...for identifying and accounting for organizational drivers.
 
@@ -362,7 +390,7 @@ Awareness of **organizational drivers** can be passed to an appropriate domain t
 <section data-markdown>
     <script type="text/template">
 
-### Navigating Via Tension (cont.)
+### Navigate Via Tension (cont.)
 
 ![](img/tension-driver-domain/navigate-via-tension-slides.png)
 </script></section><section data-markdown><script type="text/template">### Proposal Forming
@@ -427,7 +455,7 @@ Objections to a nominee taking on the role may be resolved in many ways includin
 A workshop format to identify an effective response to a complex situation: organize start-ups, kick-off projects, tackle major impediments or opportunities, align organizational structure to the flow of value.
 
 * inspired by Gojko Adzic’s Impact Mapping
-* in the workshop small or large teams self-organize, innovate, and take full ownership from start to finish and progress quickly from concept to fully functioning collaboration
+* small or large groups identify and prioritize drivers, progressing quickly from concept to action in self-organizing teams.
 
 
     </script>
@@ -805,6 +833,8 @@ A circle:
     * each circle responds to a primary driver, can create value independently, and organizes day-to-day-work
 * **self-governing**:
     * leads in creating its strategy and agreements
+
+![](img/tension-driver-domain/driver-domain-selection-development.png)
 </script></section><section data-markdown><script type="text/template">### Role
 
 <img class="float-right" src="img/people-and-roles/roles.png" width="50%" />
@@ -866,7 +896,7 @@ Representatives (a.k.a links):
 * use S3 principles as a guide for adaptation
 * ensure experiments with adaptation run long enough to learn about benefits and potential pitfalls
 * consider feeding back valuable adaptations to the S3 community
-</script></section><section data-markdown><script type="text/template">### Pull-System For Organizational Change
+</script></section><section data-markdown><script type="text/template">### Create a Pull-System For Organizational Change
 
 Change things when there is value in doing so.
 
@@ -982,17 +1012,17 @@ _A **strategy** is a high level approach towards creating value within a domain.
 <img class="float-right" src="img/tension-driver-domain/domain-driver-strategy-exeriments.png" width="50%" />
 </script></section><section data-markdown><script type="text/template">### Domain Description
 
-A domain description contains:
+<img class="float-right" src="img/people-and-roles/domain-description-template.png" width="50%" />
 
-* domain:
-    * driver
-    * key subdrivers (key responsibilities)
-* constraints:
+A domain description is used as a circle, open location and role description too. It contains:
+
+* a description of the domain: primary driver and key subdrivers (key responsibilities)
+* details of any constraints in relation to people accounting for the domain:
     - preferred/required skills, qualities, experience
     - resources, budget, time, privileges
     - evaluation criteria and frequency
     - term (for a role)
-* previous versions
+* (previous versions)
 </script></section><section data-markdown><script type="text/template">### Intended Outcome
 
 <img class="float-right" src="img/agreements/outcome-and-criteria.png" width="50%" />
@@ -1176,7 +1206,7 @@ Many different activities for each phase can be found at [plans-for-retrospectiv
 * adaptation of existing agreements or creation of new agreements on the spot
 </script></section><section data-markdown><script type="text/template">### Planning And Review Meetings
 
-<img class="float-right" src="img/meetings/planning-review-standup.png" width="50%" />
+<img class="float-right" src="img/meetings/planning-review.png" width="50%" />
 
 * planning and review meetings happen at regular intervals (1-4 weeks)
 * planning meeting:
@@ -1222,7 +1252,7 @@ A group facilitation technique to maintain equivalence.
 2. Go around the circle giving everyone the chance to speak
 
 There are a number of ways that experienced groups can fast track certain rounds.
-</script></section><section data-markdown><script type="text/template">### Meeting Facilitation
+</script></section><section data-markdown><script type="text/template">### Facilitate Meetings
 
 Choose someone to facilitate a meeting. Even an inexperienced facilitator can help to focus a meeting and make a positive difference.
 
@@ -1231,7 +1261,7 @@ Choose someone to facilitate a meeting. Even an inexperienced facilitator can he
     * facilitates a suitable activity or format for each topic
     * holds the space, keeps the time and navigates the agenda during the meeting
     * facilitates an evaluation of the meeting at the end
-</script></section><section data-markdown><script type="text/template">### Meeting Evaluation
+</script></section><section data-markdown><script type="text/template">### Evaluate Meetings
 
 <img class="float-right" src="img/meetings/evaluate-interactions.png" width="50%" />
 
@@ -1252,7 +1282,7 @@ Take time for learning at the end of each meeting or workshop.
 <section data-markdown>
     <script type="text/template">
 
-### Meeting Evaluation: Long Format
+### Evaluate Meetings: Long Format
 
 Ask everyone in a round to reflect on any or all of the following topics in a brief sharing:
 
@@ -1298,16 +1328,16 @@ A governance backlog is a visible, prioritized list of items (drivers) that requ
 * agreements for review
 * selecting people for roles
 * upcoming effectiveness reviews
-</script></section></section><section><section data-markdown><script type="text/template">### Operations Backlog
+</script></section></section><section><section data-markdown><script type="text/template">### Backlog
 
-An operations backlog (to-do-list) is a visible, prioritized list of work items (drivers) that need to be addressed.
-</script></section><section data-markdown><script type="text/template">### Prioritized Backlog
+A backlog (to-do-list) is a visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed.
 
-A prioritized backlog is a **list of all uncompleted work items** with the **most important items on top**:
+Types of backlog include:
 
-* work items are pulled from the top whenever there is new capacity
-* no two items can be of equal importance, meaning it is
-necessary to agree on priorities and make tough choices
+* operations backlog
+* sprint backlog
+* product backlog
+* impediments backlog
 
 
     </script>
@@ -1316,12 +1346,8 @@ necessary to agree on priorities and make tough choices
 <section data-markdown>
     <script type="text/template">
 
-### Prioritized Backlog (cont.)
+###  Backlog (cont.)
 
-* **Benefits**
-    - focus on most important items
-    - keep track of everything
-    - shared understanding of priorities enables more effective collaboration
 * **Implementation**
     - **analog backlog**: sticky notes on a wall, or index cards, magnets and whiteboard
     - **digital backlog**: e.g. Google Sheets, Trello
@@ -1333,15 +1359,24 @@ necessary to agree on priorities and make tough choices
 <section data-markdown>
     <script type="text/template">
 
-### Elements of a prioritized backlog
+### Elements of a (prioritized) backlog
 
 * a **short description** or a driver statement
 * a **unique reference number** (or link) for each work item
-* the **order of work items**
+* (the **order of work items**)
 * **dependencies** to other work items or projects
 * **due date** (if necessary)
 * (optional) a measure for **value**
 * (optional) a measure for **investment** (often an estimate of time or complexity)
+</script></section><section data-markdown><script type="text/template">### Prioritize Backlogs
+
+Order **all uncompleted work items** with the most important items first:
+
+* work items are pulled from the top whenever there is new capacity
+* no two items can be of equal importance, meaning it is necessary to agree on priorities and make tough choices
+* **Benefits**
+    - focus on most important items
+    - shared understanding of priorities enables more effective collaboration
 </script></section><section data-markdown><script type="text/template">### Visualize Work
 
 <img class="float-right" src="img/workflow-and-value/simple-process.png" width="50%" />
