small style fixes and new build

--- a/reveal.js/slides.html
+++ b/reveal.js/slides.html
@@ -78,7 +78,7 @@
 <section data-markdown>
     <script type="text/template">
 
-### Core concepts for understanding S3.
+### Core concepts for understanding S3:
 
 - patterns
 - the seven principles
@@ -1497,7 +1497,7 @@ An effective organizational structure:
 <section data-markdown>
     <script type="text/template">
 
-### Organizational Structure (cont.) ###
+### Organizational Structure (cont.)
 
 The basic building blocks for organizational structure are interdependent, connected domains.
 
@@ -1510,7 +1510,7 @@ Domains can be linked in a hierarchy or a **heterarchy** (a.k.a. complex adaptiv
 <section data-markdown>
     <script type="text/template">
 
-### Structural Patterns ###
+### Structural Patterns
 
 Sociocracy 3.0 describes a variety of patterns to grow organizational structure.
 
