added theme, renamed template and additional styles

--- a/reveal.js/s3-template.html
+++ b/reveal.js/s3-template.html
@@ -7,13 +7,13 @@
 		<title>S3 - Patterns</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/simple.css">
+		<link rel="stylesheet" href="s3-theme.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- Some fixes (mainly for images) -->
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="s3-styles.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
