--- a/reveal.js/slides.html
+++ b/reveal.js/slides.html
@@ -7,13 +7,13 @@
 		<title>S3 - Patterns</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/simple.css">
+		<link rel="stylesheet" href="css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- Some fixes (mainly for images) -->
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="custom-styles.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -178,6 +178,12 @@
 </section>
 
 </section><section><section>
+<h1>1. Co-Creation And Evolution</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 1.1: Respond to Organizational Drivers</h2>
 
 <div class="float-left">
@@ -459,6 +465,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>2. Peer Development</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 2.1: Ask For Help</h2>
 
 <p>A simple protocol for learning, skill sharing, and building connections, with respect for people's autonomy.</p>
@@ -539,6 +551,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>3. Enablers Of Co-Creation</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 3.1: Artful Participation</h2>
 
 <div class="float-left">
@@ -839,6 +857,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>4. Building Organizations</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 4.1: Nested Domains</h2>
 
 <div class="float-left">
@@ -956,6 +980,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>5. Bringing In S3</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 5.1: Adapt Patterns To Context</h2>
 
 <div class="float-left">
@@ -1067,6 +1097,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>6. Defining Agreements</h1>
+
+
+</section>
+
+<section>
 <h2>S3 promotes a hypothesis-driven approach to decision making</h2>
 
 <p><img src="img/experiments/experiments.png" alt="" /></p>
@@ -1268,6 +1304,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>7. Focused Interactions</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 7.1: Governance Meeting</h2>
 
 <div class="float-left">
@@ -1441,6 +1483,12 @@ based on learning.</p>
 </section>
 
 </section><section><section>
+<h1>8. Meeting Practices</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 8.1: Rounds</h2>
 
 <div class="float-left">
@@ -1566,6 +1614,12 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 </section>
 
 </section><section><section>
+<h1>9. Organizing Work</h1>
+
+
+</section>
+
+<section>
 <h2>Pattern 9.1: Backlog</h2>
 
 <p>A backlog (to-do-list) is a visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed.</p>
@@ -1730,6 +1784,12 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 </section>
 
 </section><section><section>
+<h1>10. Organizational Structure</h1>
+
+
+</section>
+
+<section>
 <h2>Organizational Structure</h2>
 
 <p>Organizational structure is the actual arrangement of domains and their connections. It reflects where power to influence is located, and the channels through which information and influence flow.</p>
