--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -7,7 +7,7 @@
 		<title>S3 - Patterns</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="custom-theme.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -28,7 +28,7 @@
 		<div class="reveal">
 			<div class="slides">
 <section><section data-background-image="img/general/logo.png">
-<h1>[fit] Sociocracy 3.0</h1>
+<h1>Sociocracy 3.0</h1>
 
 <h1>All Patterns Explained</h1>
 <h4>James Priest and Bernhard Bockelbrink</h4>
@@ -2008,7 +2008,7 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 			    progress: true,
 
 			    // Display the page number of the current slide
-			    slideNumber: false,
+			    slideNumber: true,
 
 			    // Push each slide change to the browser history
 			    history: true,
@@ -2051,7 +2051,7 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 			    // Number of milliseconds between automatically proceeding to the
 			    // next slide, disabled when set to 0, this value can be overwritten
 			    // by using a data-autoslide attribute on your slides
-			    autoSlide: 0,
+			    autoSlide: 5000,
 
 			    // Stop auto-sliding after user input
 			    autoSlideStoppable: true,
@@ -2069,7 +2069,7 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 			    previewLinks: true,
 
 			    // Transition style
-			    transition: 'default', // none/fade/slide/convex/concave/zoom
+			    transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 			    // Transition speed
 			    transitionSpeed: 'default', // default/fast/slow
