--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -1999,7 +1999,18 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+				// The "normal" size of the presentation, aspect ratio will be preserved
+				// when the presentation is scaled to fit different resolutions. Can be
+				// specified using percentage units.
+				width: 960,
+				height: 700,
 
+				// Factor of the display size that should remain empty around the content
+				margin: 0.3,
+
+				// Bounds for smallest/largest possible scale to apply to content
+				minScale: 0.2,
+				maxScale: 1.5,
 
 			    // Display controls in the bottom right corner
 			    controls: true,
