updated repo to new deck builder

--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -36,7 +36,7 @@
 
 </section>
 
-<section>
+</section><section><section>
 <h1>Sociocracy 3.0 - An open framework for evolving agile and resilient organizations</h1>
 
 <h3>Effective Collaboration At Any Scale</h3>
@@ -460,10 +460,6 @@ based on learning.</p>
 
 </section>
 
-<section>
-
-</section>
-
 </section><section><section>
 <h1>2. Peer Development</h1>
 
@@ -543,10 +539,6 @@ based on learning.</p>
 <h2>Template for Development Plan</h2>
 
 <p><img src="img/people-and-roles/development-plan-template.png" alt="" /></p>
-
-</section>
-
-<section>
 
 </section>
 
@@ -852,10 +844,6 @@ based on learning.</p>
 
 </section>
 
-<section>
-
-</section>
-
 </section><section><section>
 <h1>4. Building Organizations</h1>
 
@@ -975,10 +963,6 @@ based on learning.</p>
 
 </section>
 
-<section>
-
-</section>
-
 </section><section><section>
 <h1>5. Bringing In S3</h1>
 
@@ -1089,10 +1073,6 @@ based on learning.</p>
 </ul>
 </div>
 <div class="float-right"><img src="img/workflow-and-value/drivers-value-waste.png" /></div>
-
-</section>
-
-<section>
 
 </section>
 
@@ -1299,10 +1279,6 @@ based on learning.</p>
 
 </section>
 
-<section>
-
-</section>
-
 </section><section><section>
 <h1>7. Focused Interactions</h1>
 
@@ -1478,10 +1454,6 @@ based on learning.</p>
 
 </section>
 
-<section>
-
-</section>
-
 </section><section><section>
 <h1>8. Meeting Practices</h1>
 
@@ -1606,10 +1578,6 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 <li>selecting people for roles</li>
 <li>upcoming effectiveness reviews</li>
 </ul>
-
-</section>
-
-<section>
 
 </section>
 
@@ -1776,10 +1744,6 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 <li>the coordinator role is an optional pattern for coordination work within a domain</li>
 <li>coordinators may collaborate to synchronize work across multiple domains</li>
 </ul>
-
-</section>
-
-<section>
 
 </section>
 
@@ -1957,10 +1921,6 @@ Reflect on interactions, celebrate successes and share suggestions for improveme
 </ul>
 </div>
 <div class="float-right"><img src="img/structural-patterns/fractal-organization.png" /></div>
-
-</section>
-
-<section>
 
 </section>
 
