--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -716,7 +716,7 @@ based on learning.</p></div>
 <h2>Pattern 4.1: Nested Domains</h2>
 <div class="float-left">
 <p>Understanding an organization in terms of nested domains to account for - and areas where the people responding have semi-autonomy to decide - facilitates more effective collaboration.</p>
-<p>When defining a domain in relation to an organizational driver, consider responsibilities, the resources and skills required, and the constraints to  people's autonomy to account for it, considering {&gt;&gt;TODO: repetition, sentence is too long anyway &lt;&lt;} necessary collaboration and exchange with other domains. </p></div>
+<p>When defining a domain in relation to an organizational driver, consider responsibilities, the resources and skills required, necessary collaboration and exchange with other domains, and other constraints to people's autonomy to account for that domain.</p></div>
 <div class="float-right"><img src="img/tension-driver-domain/nested-domains.png" /></div>
 
 </section>
