updated all image references, new build

--- a/reveal.js/s3-all-patterns-explained.html
+++ b/reveal.js/s3-all-patterns-explained.html
@@ -27,7 +27,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-<section><section data-background-image="img/general/logo.png">
+<section><section data-background-image="img/framework/logo.png">
 <h1>Sociocracy 3.0</h1>
 <h1>All Patterns Explained</h1>
 <h4>James Priest and Bernhard Bockelbrink</h4>
@@ -45,12 +45,12 @@
 </section>
 
 <section>
-<p><img alt="" src="img/general/s3-pattern-groups.png" /></p>
+<p><img alt="" src="img/framework/s3-pattern-groups.png" /></p>
 </section>
 
 <section>
 <h2>Influences and History</h2>
-<p><img alt="" src="img/general/history.png" /></p>
+<p><img alt="" src="img/context/history.png" /></p>
 </section>
 
 <section>
@@ -76,7 +76,7 @@
 
 <section>
 <h2>All Patterns are based on The Seven Principles</h2>
-<p><img alt="" src="img/general/s3-principles-plain.png" /></p>
+<p><img alt="" src="img/framework/s3-principles-plain.png" /></p>
 </section>
 
 <section>
@@ -133,7 +133,7 @@
 <p><em>A <strong>domain</strong> is the set of subdrivers an organization may benefit from addressing when responding to a driver.</em></p>
 <p>Domains need to be accounted for by people, but exist independently.</p>
 <p>Building an organization from domains defined in relation to organizational drivers facilitates effective collaboration by creating enabling constraints with clear and coherent parameters for accountability.</p></div>
-<div class="float-right"><img src="img/tension-driver-domain/driver-response-full.png" /></div>
+<div class="float-right"><img src="img/driver-domain/driver-response-full.png" /></div>
 
 </section>
 
@@ -146,7 +146,7 @@
 <li>circles are accountable for their work, their body of agreements and their own development</li>
 <li>everyone in an organization is accountable for aligning action with organizational values and principles</li>
 </ul></div>
-<div class="float-right"><img src="img/tension-driver-domain/nested-domains.png" /></div>
+<div class="float-right"><img src="img/driver-domain/nested-domains.png" /></div>
 
 </section>
 
@@ -166,7 +166,7 @@
 </ul>
 <p>The response to a driver is usually an experiment that is evolved over time, 
 based on learning.</p></div>
-<div class="float-right"><img src="img/experiments/kaizen.png" /></div>
+<div class="float-right"><img src="img/evolution/kaizen.png" /></div>
 
 </section>
 
@@ -304,7 +304,7 @@ based on learning.</p></div>
 
 <section>
 <h2>Navigate Via Tension (cont.)</h2>
-<p><img alt="" src="img/tension-driver-domain/navigate-via-tension-slides.png" /></p>
+<p><img alt="" src="img/process/navigate-via-tension-slides.png" /></p>
 </section>
 
 <section>
@@ -336,7 +336,7 @@ based on learning.</p></div>
 <h2>Template for Proposals</h2>
 <div class="float-left">
 </div>
-<div class="float-right"><img src="img/agreements/proposal-template.png" /></div>
+<div class="float-right"><img src="img/templates/proposal-template.png" /></div>
 
 </section>
 
@@ -362,7 +362,7 @@ based on learning.</p></div>
 <li>When checking for objections, ask the person nominated last</li>
 </ul>
 <p>Objections to a nominee may be resolved in many ways, including amending the role description or by nominating someone else.</p></div>
-<div class="float-right"><img src="img/people-and-roles/selection.png" /></div>
+<div class="float-right"><img src="img/agreements/selection.png" /></div>
 
 </section>
 
@@ -377,12 +377,12 @@ based on learning.</p></div>
 
 <section>
 <h2>Driver Mapping (cont.)</h2>
-<p><img alt="" src="img/tension-driver-domain/driver-mapping-print.png" /></p>
+<p><img alt="" src="img/facilitation-guides/driver-mapping-print.png" /></p>
 </section>
 
 <section>
 <h2>Driver Mapping: Template for Domains</h2>
-<p><img alt="" src="img/tension-driver-domain/domain-template.png" /></p>
+<p><img alt="" src="img/templates/domain-template.png" /></p>
 </section>
 
 </section><section><section>
@@ -425,14 +425,14 @@ based on learning.</p></div>
 <p>The individual holding the role - or the team or circle - initiates the process and speaks first in each step.</p>
 <p>Invite people with complementing perspectives to contribute to the review, and a facilitator.</p>
 <p>Improvement suggestions apply to personal development, collaboration, updates to domain description and driver statement.</p></div>
-<div class="float-right"><img src="img/people-and-roles/effectiveness-review.png" /></div>
+<div class="float-right"><img src="img/process/effectiveness-review.png" /></div>
 
 </section>
 
 <section>
 <h2>Effectiveness Review (cont.)</h2>
 <h3>Continuous improvement of people's ability to effectively fulfill roles or collaborate together in groups (or teams and circles)</h3>
-<p><img alt="" src="img/people-and-roles/development-process.png" /></p>
+<p><img alt="" src="img/evolution/development-process.png" /></p>
 </section>
 
 <section>
@@ -451,7 +451,7 @@ based on learning.</p></div>
 
 <section>
 <h2>Template for Development Plan</h2>
-<p><img alt="" src="img/people-and-roles/development-plan-template.png" /></p>
+<p><img alt="" src="img/templates/development-plan-template.png" /></p>
 </section>
 
 </section><section><section>
@@ -471,7 +471,7 @@ based on learning.</p></div>
 <li>individuals developing collaboration skills makes for <strong>stronger teams</strong></li>
 <li>a culture of mutual support and close collaboration makes for <strong>happier people</strong></li>
 </ul></div>
-<div class="float-right"><img src="img/agreements/artful-participation.png" /></div>
+<div class="float-right"><img src="img/collaboration-values/artful-participation.png" /></div>
 
 </section>
 
@@ -486,7 +486,7 @@ based on learning.</p></div>
 <li><strong>supporting others</strong> in doing the same </li>
 <li>bringing impediments to the attention of others if necessary</li>
 </ul></div>
-<div class="float-right"><img src="img/people-and-roles/autonomy-collaboration.png" /></div>
+<div class="float-right"><img src="img/illustrations/balance-autonomy-collaboration.png" /></div>
 
 </section>
 
@@ -509,7 +509,7 @@ based on learning.</p></div>
 
 <section>
 <h2>Pattern 3.2: Adopt The Seven Principles</h2>
-<p><img alt="" src="img/general/s3-principles-plain.png" /></p>
+<p><img alt="" src="img/framework/s3-principles-plain.png" /></p>
 </section>
 
 <section>
@@ -678,7 +678,7 @@ based on learning.</p></div>
 
 <section>
 <h2>Two Ways of Opening Salaries</h2>
-<p><img alt="" src="img/people-and-roles/opening-salaries.png" /></p>
+<p><img alt="" src="img/process/opening-salaries.png" /></p>
 </section>
 
 <section>
@@ -717,7 +717,7 @@ based on learning.</p></div>
 <div class="float-left">
 <p>Understanding an organization in terms of nested domains to account for - and areas where the people responding have semi-autonomy to decide - facilitates more effective collaboration.</p>
 <p>When defining a domain in relation to an organizational driver, consider responsibilities, the resources and skills required, necessary collaboration and exchange with other domains, and other constraints to people's autonomy to account for that domain.</p></div>
-<div class="float-right"><img src="img/tension-driver-domain/nested-domains.png" /></div>
+<div class="float-right"><img src="img/driver-domain/nested-domains.png" /></div>
 
 </section>
 
@@ -760,13 +760,13 @@ based on learning.</p></div>
 <li>people in roles lead in creating strategy for how to account for the role's domain, checking for objections with the parent circle</li>
 <li>peers support one another to develop in the roles they fulfill</li>
 </ul></div>
-<div class="float-right"><img src="img/people-and-roles/roles.png" /></div>
+<div class="float-right"><img src="img/illustrations/roles.png" /></div>
 
 </section>
 
 <section>
 <h2>Role: one way to account for a domain</h2>
-<p><img alt="" src="img/people-and-roles/driver-role-selection-development.png" /></p>
+<p><img alt="" src="img/evolution/driver-role-selection-development.png" /></p>
 </section>
 
 <section>
@@ -825,7 +825,7 @@ based on learning.</p></div>
 <li>run experiments with adaptation for long enough to learn about benefits and potential pitfalls</li>
 <li>consider sharing valuable adaptations with the S3 community</li>
 </ul></div>
-<div class="float-right"><img src="img/agreements/adapt-pattern-to-context.png" /></div>
+<div class="float-right"><img src="img/process/adapt-pattern-to-context.png" /></div>
 
 </section>
 
@@ -906,12 +906,12 @@ based on learning.</p></div>
 
 <section>
 <h2>S3 promotes a hypothesis-driven approach to decision making</h2>
-<p><img alt="" src="img/experiments/experiments.png" /></p>
+<p><img alt="" src="img/evolution/experiments.png" /></p>
 </section>
 
 <section>
 <h2>Agreement Life-Cycle</h2>
-<p><img alt="" src="img/agreements/agreement-lifecycle-long.png" /></p>
+<p><img alt="" src="img/evolution/agreement-lifecycle-long.png" /></p>
 </section>
 
 <section>
@@ -923,13 +923,13 @@ based on learning.</p></div>
 <li>agreements are the <strong>accountability of the people</strong> that make them</li>
 <li>agreements are <strong>regularly reviewed</strong></li>
 </ul></div>
-<div class="float-right"><img src="img/tension-driver-domain/driver-agreement-improvement.png" /></div>
+<div class="float-right"><img src="img/evolution/driver-agreement-improvement.png" /></div>
 
 </section>
 
 <section>
 <h2>Template for Agreements</h2>
-<p><img alt="" src="img/agreements/agreement-template.png" /></p>
+<p><img alt="" src="img/templates/agreement-template.png" /></p>
 </section>
 
 <section>
@@ -942,7 +942,7 @@ based on learning.</p></div>
 <li>for roles and circles it's often helpful to invite peers, or a superset circle, to look over a strategy and offer any objections and improvement suggestions</li>
 <li>strategy is regularly reviewed and updated as necessary (<em>pivot or persevere</em>)</li>
 </ul></div>
-<div class="float-right"><img src="img/tension-driver-domain/driver-strategy-agreements-domain.png" /></div>
+<div class="float-right"><img src="img/driver-domain/driver-strategy-agreements-domain.png" /></div>
 
 </section>
 
@@ -950,7 +950,7 @@ based on learning.</p></div>
 <h2>Strategy (cont.)</h2>
 <div class="float-left">
 <h3>Strategies are implemented and refined through experimentation and learning.</h3></div>
-<div class="float-right"><img src="img/tension-driver-domain/domain-driver-strategy-exeriments.png" /></div>
+<div class="float-right"><img src="img/evolution/domain-driver-strategy-exeriments.png" /></div>
 
 </section>
 
@@ -969,7 +969,7 @@ based on learning.</p></div>
 </li>
 <li>(previous versions)</li>
 </ul></div>
-<div class="float-right"><img src="img/people-and-roles/domain-description-template.png" /></div>
+<div class="float-right"><img src="img/templates/domain-description-template.png" /></div>
 
 </section>
 
@@ -980,7 +980,7 @@ based on learning.</p></div>
 <li>a concise description of the expected result of an agreement, action, project or strategy</li>
 <li>specific <em>Evaluation Criteria</em> and metrics can be helpful for reviewing the actual outcome</li>
 </ul></div>
-<div class="float-right"><img src="img/agreements/outcome-and-criteria.png" /></div>
+<div class="float-right"><img src="img/templates/outcome-and-criteria.png" /></div>
 
 </section>
 
@@ -1014,7 +1014,7 @@ based on learning.</p></div>
 <li>go for <strong>simple and unambiguous</strong> criteria and document them (to avoid discussion when reviewing your agreements)</li>
 <li>define <strong>actionable metrics</strong> to continuously track effects and spot deviations from intended outcomes</li>
 </ul></div>
-<div class="float-right"><img src="img/agreements/outcome-and-criteria.png" /></div>
+<div class="float-right"><img src="img/templates/outcome-and-criteria.png" /></div>
 
 </section>
 
@@ -1513,7 +1513,7 @@ based on learning.</p></div>
 <li>can add items to the governance backlog of the parent circle</li>
 <li>may be invited to select a representative to participate in the governance decision making of the parent circle</li>
 </ul></div>
-<div class="float-right"><img src="img/structural-patterns/helping-circle.png" /></div>
+<div class="float-right"><img src="img/structural-patterns/helping-team.png" /></div>
 
 </section>
 
@@ -1613,13 +1613,13 @@ based on learning.</p></div>
 
 </section>
 
-</section><section><section data-background-image="img/general/logo.png">
+</section><section><section data-background-image="img/framework/logo.png">
 <h2>Links</h2>
 <p><strong>S3 website</strong>: <a href="http://sociocracy30.org">http://sociocracy30.org</a></p>
 <p>Follow us on <strong>twitter</strong>: <a href="http://twitter.com/@sociocracy30">@sociocracy30</a></p>
 </section>
 
-<section data-background-image="img/general/logo.png">
+<section data-background-image="img/framework/logo.png">
 <h1>License</h1>
 <p>This work by Bernhard Bockelbrink and James Priest is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit 
 <a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a>.</p>
@@ -1627,7 +1627,7 @@ based on learning.</p></div>
 <a href="http://sociocracy30.org">http://sociocracy30.org</a></p>
 </section>
 
-<section data-background-image="img/general/logo.png">
+<section data-background-image="img/framework/logo.png">
 <p><strong>James Priest</strong> serves internationally, providing organizational development consultancy, learning facilitation, mentoring and conflict resolution for people wishing to evolve collaborative, adaptive organizations at scale.</p>
 <p><a href="http://thriveincollaboration.com">thriveincollaboration.com</a>  -- <a href="mailto:james@thriveincollaboration.com">james@thriveincollaboration.com</a></p>
 <p><strong>Bernhard Bockelbrink</strong> is an agile coach, trainer and consultant supporting individuals, teams and organizations in navigating complex challenges and developing a culture of effective, conscious and joyful collaboration.</p>
